<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidsamples.java.tictactoe.DashboardFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

  <TextView
      android:id="@+id/login_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="0dp"
      android:layout_marginTop="68dp"
      android:text="@string/you_are_login_as"
      android:textAlignment="center"
      android:textColor="@color/blue"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/won_score_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="117dp"
      android:layout_marginTop="24dp"
      android:text="@string/won_score"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/login_info" />

  <TextView
      android:id="@+id/lost_score_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="116dp"
      android:layout_marginTop="24dp"
      android:text="@string/lost_score"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/won_score_txt" />

  <TextView
      android:id="@+id/draw_score_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="110dp"
      android:layout_marginTop="24dp"
      android:text="@string/draw_score"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lost_score_txt" />

  <TextView
      android:id="@+id/won_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="39dp"
      android:layout_marginTop="10dp"
      android:paddingHorizontal="15sp"
      android:paddingVertical="10sp"
      android:text="@string/_0"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toEndOf="@+id/won_score_txt"
      app:layout_constraintTop_toBottomOf="@+id/login_info" />

  <TextView
      android:id="@+id/lost_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="8dp"
      android:paddingHorizontal="15sp"
      android:paddingVertical="10sp"
      android:text="@string/_0"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toEndOf="@+id/lost_score_txt"
      app:layout_constraintTop_toBottomOf="@+id/won_score" />

  <TextView
      android:id="@+id/draw_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="3dp"
      android:paddingHorizontal="15sp"
      android:paddingVertical="10sp"
      android:text="@string/_0"
      android:textAlignment="center"
      android:textSize="20sp"
      app:layout_constraintStart_toEndOf="@+id/draw_score_txt"
      app:layout_constraintTop_toBottomOf="@+id/lost_score" />

  <TextView
      android:id="@+id/open_games_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="0dp"
      android:text="@string/open_multiplayer_games"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintBottom_toTopOf="@+id/list"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/draw_score_txt" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/list"
      android:layout_width="match_parent"
      android:layout_height="437dp"
      android:maxHeight="437dp"
      app:layoutManager="LinearLayoutManager"
      android:contentDescription="@string/this_is_the_recyler_view_which_will_show_the_list_of_available_games"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:layout_editor_absoluteX="0dp"
      tools:listitem="@layout/fragment_item" />


  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_new_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:contentDescription="@string/new_game"
      android:backgroundTint="@color/green"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>